// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "availableBorrowsETH": "0",
  "currentLiquidationThreshold": "0",
  "currentLoanToValue": "0",
  "healthFactor": "0",
  "id": "0cd96fb5ee9616f64d892644f53f35be4f90xff795577d9ac8bd7d90ee22b6c1703490b6512fd0x88757f2f99175387ab4c6a4b3067c77a695b0349",
  "reservesData": Array [
    Object {
      "aTokenRewards": "0",
      "aTokenRewardsETH": "0",
      "aTokenRewardsUSD": "0",
      "aTokenincentivesUserIndex": "0",
      "principalStableDebt": "0",
      "reserve": Object {
        "decimals": 18,
        "id": "0xff795577d9ac8bd7d90ee22b6c1703490b6512fd0x88757f2f99175387ab4c6a4b3067c77a695b0349",
        "lastUpdateTimestamp": 1607000068,
        "name": "",
        "reserveLiquidationBonus": "0.05",
        "symbol": "DAI",
        "underlyingAsset": "0xff795577d9ac8bd7d90ee22b6c1703490b6512fd",
      },
      "sTokenRewards": "0",
      "sTokenRewardsETH": "0",
      "sTokenRewardsUSD": "0",
      "sTokenincentivesUserIndex": "0",
      "scaledATokenBalance": "0",
      "scaledVariableDebt": "137602026075945229933190",
      "stableBorrowAPR": "0",
      "stableBorrowAPY": "0",
      "stableBorrowLastUpdateTimestamp": 0,
      "stableBorrowRate": "0",
      "stableBorrows": "0",
      "stableBorrowsETH": "0",
      "stableBorrowsUSD": "0",
      "totalBorrows": "137635.694716770188069538",
      "totalBorrowsETH": "224.903606951938325815",
      "totalBorrowsUSD": "375539.3154302718",
      "totalRewards": "0",
      "totalRewardsETH": "0",
      "totalRewardsUSD": "0",
      "underlyingBalance": "0",
      "underlyingBalanceETH": "0",
      "underlyingBalanceUSD": "0",
      "usageAsCollateralEnabledOnUser": false,
      "vTokenRewards": "0",
      "vTokenRewardsETH": "0",
      "vTokenRewardsUSD": "0",
      "vTokenincentivesUserIndex": "0",
      "variableBorrowIndex": "0",
      "variableBorrows": "137635.694716770188069538",
      "variableBorrowsETH": "224.903606951938325815",
      "variableBorrowsUSD": "375539.3154302718",
    },
  ],
  "totalBorrowsETH": "224.903606951938325815",
  "totalBorrowsUSD": "375539.3154302718",
  "totalCollateralETH": "0",
  "totalCollateralUSD": "0",
  "totalLiquidityETH": "0",
  "totalLiquidityUSD": "0",
  "totalRewards": "0",
  "totalRewardsETH": "0",
  "totalRewardsUSD": "0",
}
`;

exports[`computations and formattings formatReserves should allow omitting timestamp 1`] = `
Object {
  "aEmissionPerSecond": "0",
  "aIncentivesAPY": "0",
  "aIncentivesLastUpdateTimestamp": 1606992400,
  "aTokenAddress": "0xdCf0aF9e59C002FA3AA091a46196b37530FD48a8",
  "aTokenIncentivesIndex": "0",
  "availableLiquidity": "43133.641118657852003256",
  "averageStableRate": "109284236984257451326752610",
  "avg30DaysLiquidityRate": undefined,
  "avg30DaysVariableBorrowRate": undefined,
  "baseLTVasCollateral": "0.75",
  "baseVariableBorrowRate": "109284236984257451326752610",
  "borrowingEnabled": true,
  "decimals": 18,
  "id": "0xff795577d9ac8bd7d90ee22b6c1703490b6512fd0x88757f2f99175387ab4c6a4b3067c77a695b0349",
  "isActive": true,
  "isFrozen": false,
  "lastUpdateTimestamp": 1606992400,
  "liquidityIndex": "1.00016444737961059057",
  "liquidityRate": "26776200735312093055313462",
  "name": "",
  "optimalUtilisationRate": "109284236984257451326752610",
  "price": Object {
    "priceInEth": "0.00163405",
  },
  "reserveFactor": "0.1",
  "reserveLiquidationBonus": "0.05",
  "reserveLiquidationThreshold": "0.8",
  "sEmissionPerSecond": "0",
  "sIncentivesAPY": "0",
  "sIncentivesLastUpdateTimestamp": 1606992400,
  "sTokenIncentivesIndex": "0",
  "stableBorrowAPR": "0.10928437169401419784",
  "stableBorrowAPY": "0.11547951583122878182",
  "stableBorrowRate": "109284371694014197840985614",
  "stableBorrowRateEnabled": true,
  "stableDebtLastUpdateTimestamp": 1606992400,
  "stableDebtTokenAddress": "0x3B91257Fe5CA63b4114ac41A0d467D25E2F747F3",
  "stableRateSlope1": "20000000000000000000000000",
  "stableRateSlope2": "750000000000000000000000000",
  "supplyAPR": "0.02677620073531209306",
  "supplyAPY": "0.02713790431950061223",
  "symbol": "DAI",
  "totalDebt": "145531.711181654053680146",
  "totalLiquidity": "188665.352300311905683402",
  "totalPrincipalStableDebt": "1",
  "totalScaledVariableDebt": "145496.831599325217573288",
  "totalStableDebt": "1",
  "totalVariableDebt": "145530.711181654053680146",
  "underlyingAsset": "0xff795577d9ac8bd7d90ee22b6c1703490b6512fd",
  "usageAsCollateralEnabled": true,
  "utilizationRate": "0.77137486776056791364",
  "vEmissionPerSecond": "0",
  "vIncentivesAPY": "0",
  "vIncentivesLastUpdateTimestamp": 1606992400,
  "vTokenIncentivesIndex": "0",
  "variableBorrowAPR": "0.03856874338802839568",
  "variableBorrowAPY": "0.03932217240517564451",
  "variableBorrowIndex": "1.00023285443371120965",
  "variableBorrowRate": "38568743388028395681971229",
  "variableDebtTokenAddress": "0xEAbBDBe7aaD7d5A278da40967E62C8c8Fe5fAec8",
  "variableRateSlope1": "40000000000000000000000000",
  "variableRateSlope2": "750000000000000000000000000",
}
`;

exports[`computations and formattings formatReserves should return plausible results 1`] = `
Object {
  "aEmissionPerSecond": "0",
  "aIncentivesAPY": "0",
  "aIncentivesLastUpdateTimestamp": 1606992400,
  "aTokenAddress": "0xdCf0aF9e59C002FA3AA091a46196b37530FD48a8",
  "aTokenIncentivesIndex": "0",
  "availableLiquidity": "43133.641118657852003256",
  "averageStableRate": "109284236984257451326752610",
  "avg30DaysLiquidityRate": undefined,
  "avg30DaysVariableBorrowRate": undefined,
  "baseLTVasCollateral": "0.75",
  "baseVariableBorrowRate": "109284236984257451326752610",
  "borrowingEnabled": true,
  "decimals": 18,
  "id": "0xff795577d9ac8bd7d90ee22b6c1703490b6512fd0x88757f2f99175387ab4c6a4b3067c77a695b0349",
  "isActive": true,
  "isFrozen": false,
  "lastUpdateTimestamp": 1606992400,
  "liquidityIndex": "1.00016444737961059057",
  "liquidityRate": "26776200735312093055313462",
  "name": "",
  "optimalUtilisationRate": "109284236984257451326752610",
  "price": Object {
    "priceInEth": "0.00163405",
  },
  "reserveFactor": "0.1",
  "reserveLiquidationBonus": "0.05",
  "reserveLiquidationThreshold": "0.8",
  "sEmissionPerSecond": "0",
  "sIncentivesAPY": "0",
  "sIncentivesLastUpdateTimestamp": 1606992400,
  "sTokenIncentivesIndex": "0",
  "stableBorrowAPR": "0.10928437169401419784",
  "stableBorrowAPY": "0.11547951583122878182",
  "stableBorrowRate": "109284371694014197840985614",
  "stableBorrowRateEnabled": true,
  "stableDebtLastUpdateTimestamp": 1606992400,
  "stableDebtTokenAddress": "0x3B91257Fe5CA63b4114ac41A0d467D25E2F747F3",
  "stableRateSlope1": "20000000000000000000000000",
  "stableRateSlope2": "750000000000000000000000000",
  "supplyAPR": "0.02677620073531209306",
  "supplyAPY": "0.02713790431950061223",
  "symbol": "DAI",
  "totalDebt": "145532.067159127448634594",
  "totalLiquidity": "188665.70827778530063785",
  "totalPrincipalStableDebt": "1",
  "totalScaledVariableDebt": "145496.831599325217573288",
  "totalStableDebt": "1.00000693078484952",
  "totalVariableDebt": "145531.067152196663785074",
  "underlyingAsset": "0xff795577d9ac8bd7d90ee22b6c1703490b6512fd",
  "usageAsCollateralEnabled": true,
  "utilizationRate": "0.77137529913412102034",
  "vEmissionPerSecond": "0",
  "vIncentivesAPY": "0",
  "vIncentivesLastUpdateTimestamp": 1606992400,
  "vTokenIncentivesIndex": "0",
  "variableBorrowAPR": "0.03856874338802839568",
  "variableBorrowAPY": "0.03932217240517564451",
  "variableBorrowIndex": "1.00023285443371120965",
  "variableBorrowRate": "38568743388028395681971229",
  "variableDebtTokenAddress": "0xEAbBDBe7aaD7d5A278da40967E62C8c8Fe5fAec8",
  "variableRateSlope1": "40000000000000000000000000",
  "variableRateSlope2": "750000000000000000000000000",
}
`;
